Fix encryption checkbox so it doesn't overlap classification select field

--- a/cfts/static/css/frontend.css
+++ b/cfts/static/css/frontend.css
@@ -85,3 +85,11 @@ label.custom-control-label {
 	margin-right: 2em;
 	width: 50%;
 }
+
+.file-list input[ type = checkbox ] {
+  position: relative;
+  margin-right: -3rem;
+  margin-left: -2.5rem;
+}
+
+.file-list label { white-space: nowrap; }
